Attempt to fix definition iphone format

--- a/styles.css
+++ b/styles.css
@@ -97,10 +97,10 @@ body {
 
 .definition {
   width: 250px;
-  margin: 75px;
+  /* margin: 75px; */
   /* margin-top: 18rem;
   margin-top: 3rem; */
-  text-align: center;
+  /* text-align: center; */
   padding: 0.5rem;
   margin-top: 75px;
 }
@@ -244,7 +244,7 @@ input[id^='tile'][disabled] {
   width: 150px;
   text-align: center;
   position: relative;
-  height: 50px;
+  height: 40px;
   padding: 3px;
 }
 
